syntax = "proto3";
package rill.runtime.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


service ConnectorService {
  rpc S3ListBuckets(S3ListBucketsRequest) returns (S3ListBucketsResponse) {
    option (google.api.http) = {get: "/v1/s3/buckets"};
  }

  rpc S3ListObjects(S3ListObjectsRequest) returns (S3ListObjectsResponse) {
    option (google.api.http) = {get: "/v1/s3/bucket/{bucket}/objects"};
  }

  rpc S3GetBucketMetadata(S3GetBucketMetadataRequest) returns (S3GetBucketMetadataResponse) {
    option (google.api.http) = {get: "/v1/s3/bucket/{bucket}/metadata"};
  }

  rpc GCSListBuckets(GCSListBucketsRequest) returns (GCSListBucketsResponse) {
    option (google.api.http) = {get: "/v1/gcs/buckets"};
  }

  rpc GCSListObjects(GCSListObjectsRequest) returns (GCSListObjectsResponse) {
    option (google.api.http) = {get: "/v1/gcs/bucket/{bucket}/objects"};
  }

}

message S3Object {
  string name = 1;
  google.protobuf.Timestamp modified_on = 2;
  int64 size = 3;
  bool is_dir = 4;
}

message GCSObject {
  string name = 1;
  google.protobuf.Timestamp modified_on = 2;
  int64 size = 3;
  bool is_dir = 4;
}

message S3ListBucketsRequest {
  uint32 page_size = 1;
  string page_token = 2;
}

message S3ListBucketsResponse {
  string next_page_token = 1;
  repeated string buckets = 2;
}

message S3ListObjectsRequest {
  uint32 page_size = 1;
  string page_token = 2;
  string bucket = 3;
  string region = 4;
  string prefix = 5;
  string start_after = 6;
  string delimitter = 7;
}

message S3ListObjectsResponse {
  string next_page_token = 1;
  repeated S3Object objects = 2;
}

message GCSListBucketsRequest {
  uint32 page_size = 1;
  string page_token = 2;
}

message GCSListBucketsResponse {
  string next_page_token = 1;
  repeated string buckets = 2;
}

message GCSListObjectsRequest {
  uint32 page_size = 1;
  string page_token = 2;
  string bucket = 3;
  string prefix = 4;
  string start_offset = 5;
  string end_offset = 6;
  string delimitter = 7;
}

message GCSListObjectsResponse {
  string next_page_token = 1;
  repeated GCSObject objects = 2;
}

message S3GetBucketMetadataRequest {
  string bucket = 1;
}

message S3GetBucketMetadataResponse {
  string region = 1;
}
